fix: collection-sort drawer z-index

--- a/src/styles/components/collection-filters.scss
+++ b/src/styles/components/collection-filters.scss
@@ -1,4 +1,5 @@
 .collection-filters {
+  z-index: 1000;
   display: flex;
   position: absolute;
   flex-direction: column;
